src/tests/fixtures/subscriptions/InputTypeWithAsyncIterable.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInput */
export type NotSubscription = {
  /** @gqlField */
  greetings: AsyncIterable<string>;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/subscriptions/InputTypeWithAsyncIterable.invalid.ts:4:14 - error: Unable to resolve type reference. In order to generate a GraphQL schema, Grats needs to determine which GraphQL type is being referenced. This requires being able to resolve type references to their `@gql` annotated declaration. However this reference could not be resolved. Is it possible that this type is not defined in this file?

4   greetings: AsyncIterable<string>;
               ~~~~~~~~~~~~~~~~~~~~~
